          time).

        [INCOMPATIBLE CHANGES]

        - The $progress export is now set to the root ('') indicator instead of
          'main', so it includes all indicators.

        - fill_template(): re-rationalize template names: %a (elapsed time)
          becomes %e, %c (pos) becomes %P, %C (target) becomes %T, %t (task
          name) becomes %n.

        [REMOVED FEATURES]

        - Remove 'status' in update() because it is unneeded (concerning outputs
          can use 'message' instead).


0.09    2013-05-18 (SHARYANTO)

        - Bugfix: double counting of children's targets.


0.08    2013-05-18 (SHARYANTO)

        - Bugfix: update() didn't recognize 'finished' parameter.

        - Maintain a root-level indicator (task='') to capture updates from all
          progress indicators.


0.07    2013-05-18 (SHARYANTO)

        [ENHANCEMENTS]

        - Add total_target().


0.06    2013-05-18 (SHARYANTO)

        [INCOMPATIBLE CHANGES]

        - Change default task in get_indicator() to be caller's package, not
          subroutine.


0.05    2013-05-18 (SHARYANTO)

        - Happy birthday, bro!

        [INCOMPATIBLE CHANGES]

        - Revise API, now more resembles Log::Any and incompatible with previous
          version of Progress::Any. Split output to Progress-Any-Output (like
          Log-Any-Adapter is split from Log-Any), remove set_output(). Remove
          init() and replace it with pos() and target() because we might need to
          reinit (reset pos and target) any time. Remove 'inc' argument in
          update() to make things more orthogonal (you can always do update(pos
          => $progress->pos + $x). Check task syntax in get_indicator().

        [ENHANCEMENTS]

        - API: parent indicators now get update()'d also whenever we do
          update()/pos($val)/target($val) on an indicator.

        - Progress::Any is now the one which is responsible for calculating